fix(ai): reemplaza isBlank() por trim().isEmpty() para compatibilidad JDK8
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>